examples/example_051/example_051.v
Local Open Scope nat_scope.
Require Import Init. Local Open Scope nat_scope.
Require Import Init.
Load A.
Fail Check Set.
